test/boolVectorLength.slq
def fun[n:!ğ”¹](x:ğ”¹^n)â‡’x;

def main(){
	x:=fun(0:ğ”¹,1:ğ”¹); /// error
	y:=fun(); // ok
	z:=fun(0:ğ”¹,); // ok
	return (x,y,z);
}
